# ExtendRandomBBoxCrop

./: .gitignore  CMakeLists.txt  README.md  extend_bbox_crop.cc  extend_bbox_crop.h  landmarks.h  landmarks_utils.h
examples/: DALI_test.ipynb
examples/WIDER_FACE_rect/: img_list.wf.txt
